# src/types/users.ts
@@ -7,4 +7,8 @@ type UserRecord = User;
 
 type UserOutput = Omit<UserRecord, "is_deleted">;
 
-export { UserRecord, UserOutput };
+type UserCreateInput = Pick<UserRecord, "email" | "fullname" | "country"> & { password: string };
+
+type UserUpdateInput = Partial<Omit<UserRecord, "id">>;
+
+export { UserRecord, UserOutput, UserCreateInput, UserUpdateInput };
