# tsoa/swagger.json
@@ -15,18 +15,18 @@
 					"email": {
 						"type": "string"
 					},
-					"firstname": {
+					"fullname": {
 						"type": "string"
 					},
-					"lastname": {
+					"country": {
 						"type": "string"
 					}
 				},
 				"required": [
 					"id",
 					"email",
-					"firstname",
-					"lastname"
+					"fullname",
+					"country"
 				],
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
@@ -37,6 +37,44 @@
 			},
 			"UserOutput": {
 				"$ref": "#/components/schemas/Omit_UserRecord.is_deleted_"
+			},
+			"Pick_UserRecord.email-or-fullname-or-country_": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"fullname": {
+						"type": "string"
+					},
+					"country": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"fullname",
+					"country"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"UserCreateInput": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/Pick_UserRecord.email-or-fullname-or-country_"
+					},
+					{
+						"properties": {
+							"password": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"password"
+						],
+						"type": "object"
+					}
+				]
 			}
 		},
 		"securitySchemes": {}
@@ -73,12 +111,14 @@
 						}
 					}
 				},
+				"description": "Retrieves the details of an existing user.\nSupply the unique user ID from either and receive corresponding user details.",
 				"tags": [
 					"User service"
 				],
 				"security": [],
 				"parameters": [
 					{
+						"description": "The user's identifier",
 						"in": "path",
 						"name": "userId",
 						"required": true,
@@ -87,6 +127,38 @@
 						}
 					}
 				]
+			}
+		},
+		"/users": {
+			"post": {
+				"operationId": "CreateUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/UserOutput"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User service"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserCreateInput"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
